@@ -11,6 +11,14 @@ subprojects {
             sourceCompatibility = JavaVersion.VERSION_21
             targetCompatibility = JavaVersion.VERSION_21
         }
+
+        tasks.withType(JavaCompile).configureEach {
+            options.compilerArgs.add('--enable-preview')
+        }
+
+        tasks.withType(Test).configureEach {
+            jvmArgs('--enable-preview')
+        }
     }
 
     repositories {
